# service_Http

./: README.md
service_http/: .CMakeLists.txt.swp  CMakeLists.txt
service_http/conf/: log4cxx.cfg
service_http/include/dict/: ChangeLog  Makefile  Makefile_demo  dict.deps  dict.prj  main0.cpp  ul_dict.cpp  ul_drdict.cpp  ul_url_sign.cpp
service_http/include/dict/test/: Makefile  README  badcase20101026.list  case.list  rand_string.c  run_test.sh  test_dict.deps  test_dict.prj
service_http/include/others-ex/include/: ul_buff.h  ul_dictmatch.h  ul_strdict.h
service_http/include/others-ex/lib/: install.sh
service_http/include/others-ex/lib/apr/: Makefile  apr-1-config  apr-config.out  config.nice  config.status  exports.c  libapr-1.la
service_http/include/others-ex/lib/apr-util/: Makefile  apu-1-config  config.nice  config.status  exports.c  libaprutil-1.la
service_http/include/others-ex/lib/apr-util/buckets/: apr_brigade.lo  apr_buckets.lo  apr_buckets_alloc.lo  apr_buckets_eos.lo  apr_buckets_file.lo  apr_buckets_flush.lo  apr_buckets_heap.lo  apr_buckets_mmap.lo  apr_buckets_pipe.lo  apr_buckets_pool.lo  apr_buckets_refcount.lo  apr_buckets_simple.lo  apr_buckets_socket.lo
service_http/include/others-ex/lib/apr-util/crypto/: apr_md4.lo  apr_md5.lo  apr_sha1.lo  getuuid.lo  uuid.lo
service_http/include/others-ex/lib/apr-util/dbd/: apr_dbd.lo  apr_dbd_sqlite3.la  apr_dbd_sqlite3.lo
service_http/include/others-ex/lib/apr-util/dbm/: apr_dbm.lo  apr_dbm_sdbm.lo
service_http/include/others-ex/lib/apr-util/encoding/: apr_base64.lo
service_http/include/others-ex/lib/apr-util/hooks/: apr_hooks.lo
service_http/include/others-ex/lib/apr-util/ldap/: apr_ldap_stub.lo  apr_ldap_url.lo
service_http/include/others-ex/lib/apr-util/lib/: libaprutil-1.la
service_http/include/others-ex/lib/apr-util/memcache/: apr_memcache.lo
service_http/include/others-ex/lib/apr-util/misc/: apr_date.lo  apr_queue.lo  apr_reslist.lo  apr_rmm.lo  apr_thread_pool.lo  apu_dso.lo  apu_version.lo
service_http/include/others-ex/lib/jsoncpp/: Makefile
service_http/include/others-ex/lib/libiconv/: Makefile  config.h  config.status  libtool
service_http/include/others-ex/lib/log4cxx/: Makefile  config.status  liblog4cxx.pc  libtool
service_http/include/ullib/: transcode.sh
service_http/include/ullib/include/: basiclogadapter.h  ul_string.h
service_http/include/ullib/include/comlog/: category.h  comlog.h
service_http/log/: new.log.wf  qs.log.wf  servicelog  servicelog.wf
service_http/src/: Makefile  db.h  protocol.cpp  protocol.h  sdlog.cpp  sdlog.h  service_http.cpp  service_http.h  signdict.cpp  signdict.h  test.cpp  utility.cpp  utility.h
(+1599 files in other folders)
